udemy/hashicorp-terraform-training/Section-03-terraform-deploy-basics/02-deploy-single-web-server/security_group.tf
resource "aws_security_group" "webserver_sg" {

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [ "209.6.130.15/32" ]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [ "209.6.130.15/32" ]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

}
